# termux-api-rs

./: .gitignore  Cargo.toml  README.md
src/api/: battery_status.rs  brightness.rs  camera.rs  clipboard.rs  errors.rs  mod.rs  notification.rs  toast.rs
src/api/dialog/: confirm.rs  mod.rs
