[package]
name = "termux-api"
version = "0.1.0"
description = "A Rust wrapper around Termux API."
edition = "2021"
license = "MIT"
homepage = "https://github.com/adhamsalama/termux-api-rs"
repository = "https://github.com/adhamsalama/termux-api-rs"

[lib]
# This must contain at least cdylib for Android libraries to be generated.
crate-type = ["cdylib"]


targets = ["aarch64-linux-android"]

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
